[package]
name = "tool_resources"
version = "0.1.0"
authors = ["cpdt <copodt@gmail.com>"]
edition = "2018"

[dependencies]
winapi = { version = "0.3", features = ["debugapi", "heapapi", "windef", "winuser", "dxgi", "d3d11", "d3dcompiler"] }
notify = { version = "4.0" }
slotmap = { version = "1", features = ["unstable"] }
pathdiff = { version = "0.1" }
path_abs = { version = "0.4" }
